methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:4: error: Invalid literal number
     for(<-1to nbPas){
           ^MethodsArgs:4: error: illegal start of simple pattern
     for(<-1to nbPas){
         ^MethodsArgs:7: error: '<-' expected but '}' found.
  }else{
  ^